--- a/Hello-World.css
+++ b/Hello-World.css
@@ -4,4 +4,15 @@ body{
 
 h1 {
     color: brown;
+    font-size: 25px;
+}
+
+h2{
+    color: green;
+    font-size: 20px;
+}
+
+.red-heading{
+    color: red;
+    
 }
