--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,15 @@ h1 {
     font-size: 25px;
 }
 
-h2{
+h2 {
     color: green;
     font-size: 20px;
+}
+
+header p {
+    font-weight: bold;
+    font-style: italic;
+    color: blue;
 }
 
 .red-heading{
