--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,20 @@ h1 {
 }
 
 h2 {
-    color: green;
+    color: gray;
     font-size: 20px;
+}
+
+.left-text {
+    text-align: left;
+}
+
+.right-text {
+    text-align: right;
+}
+
+.center-text {
+    text-align: center;
 }
 
 header p {
@@ -17,6 +29,19 @@ header p {
     font-style: italic;
     color: blue;
 }
+
+.body-img {
+    border: black solid 2px;
+    display: inline-block;
+    margin: 8px;
+}
+
+.center-img {
+    border: black solid 2px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }  
 
 main {
     background-color: lightgray;
