--- a/styles/style.css
+++ b/styles/style.css
@@ -160,3 +160,11 @@ aside {
     padding: 8px;
     width: 33%;        
 }
+
+.blueBackground {
+    background-color: aqua;
+}
+
+.greenBackground {
+    background-color: green;
+}          
